@@ -10,6 +10,9 @@ APIKEY = "ABQIAAAA06IJoYHDPFMx4u3hTtaghxSXii2MTQlH08211N69IoqDn0RDwxSg93HhPES135
 # 192.168.0.100:8000/
 APIKEY = "ABQIAAAA06IJoYHDPFMx4u3hTtaghxTU2QkCNWGFpwxhhQnHf-7Pc6f1lBTQWFSuWvEBhZGiAbR5wPO0DLqoOw"
 
+# Haddock
+APIKEY="ABQIAAAA06IJoYHDPFMx4u3hTtaghxS1mGAeXhF8eEwoOC3WUqD9xSVHbhT_wvgbriWemZzoPwFT5-HqnLJ9-A"
+
 ADMINS = (
     # ('Your Name', 'your_email@domain.com'),
 )
